syntax = "proto3";
service Dns {
  rpc GetService (GetRequest) returns (GetResponse) {}
  rpc PostService (PostRequest) returns (PostResponse) {}
}

message GetRequest {
 string serviceName = 1;
}

message GetResponse {
  repeated string hosts = 1;
}

message PostRequest {
  string serviceName = 1;
  string operation = 2;
  string host = 3;
}

message PostResponse {
}